# big-wash

./: CMakeLists.txt  README.md  main.cpp
pictures/: одежка.cdr
